# astropack

./: $ RST cheat summary.rst  .gitignore  MANIFEST.in  README.rst  common_links.txt  requirements.txt  setup.cfg  setup.py  tox-AstropyDev.ini  tox.ini
astropack/: __init__.py  _astropy_init.py  almanac.py  catalogs.py  conftest.py  geometry.py  haha.py  image.py  ini.py  reference.py  stats.py  util.py  web.py
astropack/defunct/: old_code.py  test_old_code.py
astropack/tests/: test_almanac.py  test_catalogs.py  test_geometry.py  test_image.py  test_ini.py  test_stats.py  test_util.py  test_web.py
astropack/tests/$data_for_test/: BoreaC14.ini  EVD.ini  MP_1300-0004-BB.txt  PointBarrow.ini
docs/: common_links.txt  conf.py  index-defunct.rstx  index.rst  make.bat
docs/_build/html/: .buildinfo  genindex.html  index-defunct.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_static/: astropack.css  backpack-star-favicon2.psd  backpack-star-favicon3.psd  backpack-star-logo.psd  backpack-star-logo2.psd  backpack-star.psd
docs/_build/html/astropack/: almanac.html  catalogs.html  geometry.html  image.html  index.html  ini.html  reference.html  stats.html  util.html  web.html
docs/api/: astropack.haha.cartesian_to_spherical.rst  astropack.haha.more_hahaha.rst
docs/astropack/: almanac.rst  catalogs.rst  geometry.rst  image.rst  index.rst  ini.rst  reference.rst  stats.rst  util.rst  web.rst
licenses/: LICENSE.rst
