[metadata]
name = astropack
author = Eric Dose, Albuquerque
author_email = 
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url =
description = a pack of astronomical routines
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = edose/astropack

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
astropack = data/*

[tool:pytest]
testpaths = "astropack" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astropack/_astropy_init*
    astropack/conftest.py
    astropack/*setup_package*
    astropack/tests/*
    astropack/*/tests/*
    astropack/extern/*
    astropack/version*
    */astropack/_astropy_init*
    */astropack/conftest.py
    */astropack/*setup_package*
    */astropack/tests/*
    */astropack/*/tests/*
    */astropack/extern/*
    */astropack/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
